Add like a trigger getPhotoId